# Original

./: .gitignore  Dockerfile  README.md  db.sqlite3  demo.py  docker-compose.yaml  log.txt  pyproject.toml  quieries.sql  requirements.txt
blogapp/: admin.py  models.py  sitemap.py  sitemaps.py  urls.py  views.py
blogapp/migrations/: 0001_initial.py  0002_remove_article_content_article_body_and_more.py
blogapp/templates/blogapp/: article_detail.html  articles-list.html  base.html
database/: db.sqlite3
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
myapiapp/: apps.py  serializers.py  urls.py  views.py
myauth/: models.py  tests.py  urls.py  views.py
myauth/management/commands/: bind_user.py
myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
myauth/templates/myauth/: about-me.html  base.html  login.html  register.html  users-list.html
mysite/: settings.py  urls.py
requestdataapp/: forms.py  middlewares.py  urls.py  views.py
shopapp/: admin.py  admin_mixins.py  common.py  devices.csv  forms.py  models.py  orders-import.csv  serializers.py  sitemap.py  tests.py  urls.py  views.py
shopapp/Export/: shopapp.product-export.csv
shopapp/fixtures/: groups-fixture.json  orders-fixture.json  products-fixture.json  shopapp-products-fixtures.xml  users-fixture.json
shopapp/migrations/: 0001_initial.py  0002_order_receipt.py  0003_product_preview.py  0004_productimage.py  0005_alter_order_options_alter_product_options.py  0006_alter_product_description_alter_product_name.py
(+27 files in other folders)
